# Retriever

./: .env.example  .gitignore  AUDIT_LOG_DESIGN.md  AUTH_REDESIGN.md  AUTH_SHELL_BUILD_PLAN.md  BUILD_CODE_LAYOUT.md  CONFIG_AND_HEALTH_CONTRACT.md  DEPLOYMENT_BRIDGE.md  FETCH_TRUST_PLAN.md  FETCH_UI_CONTINUITY.md  HANDOVER.md  KICKOFF.md  LOCAL_RUNBOOK.md  PARKED.md  PLAN.md  PRINTSMITH_TOKEN_AUTHORITY.md  PRODUCT.md  RETRIEVER_CLOUDFLARE_SCHEMA.md  REVIEW-2026-05-04-OPUS.md  RUNTIME_NOTES.md  SESSION-LOG.md  SHARED_LAYOUT_SHAPE.md  VM_SETUP_PLAN.md  pyproject.toml
app/: __init__.py  config.py  dependencies.py  main.py  security.py
deploy/: CLOUDFLARE_SETUP.md  VM_SETUP_RUNBOOK.md  WINDOWS_FETCH_RELEASE.md  deploy.ps1  deploy.sh  healthcheck.ps1  healthcheck.sh  rollback.ps1  rollback.sh  smoke.ps1  smoke.sh
docs/: DISCORD_FETCH_PARITY.md  INVENTORY_DB_SETUP.md  README.md  WORKSPACE_AND_REPOS.md
migrations/: 0001_retriever_cloudflare.sql  0001_retriever_core_auth.sql  0002_fetch_conversations.sql  0003_remove_fetch_level_and_general_toggle.sql  0004_wiki_catalog.sql  0005_expand_fetch_message_content.sql  0006_inventory_schema.sql
tests/: fakes.py  test_admin_actions.py  test_broker_user_visible_copy.py  test_cloudflare_identity.py  test_config.py  test_current_user_flow.py  test_fetch_answer_render.py  test_fetch_artifact_retention.py  test_fetch_booneops_broker.py  test_fetch_followup_routing.py  test_fetch_general_llm.py  test_fetch_local_routing.py  test_fetch_report_context.py  test_fetch_repository.py  test_fetch_uploads.py  test_health.py  test_routes.py  (+8 more)
(+138 files in other folders)
